# search-engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  readme.md  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  ConverterJSONTests.cpp  InvertedIndexTests.cpp  SearchServerTests.cpp
